--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,10 +1,16 @@
+.navbar_wrapper {
+ 
+  padding: 16px;
+  
+  background-color: hsl(0, 0%, 20%);
+}
 .navbar {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 16px;
-    background-color: hsl(0, 0%, 20%);
+    max-width: 1200px;
+    margin: 0 auto;
   }
   
 .navbar__logo a {
@@ -54,6 +60,8 @@
   
   .navbar__menu__icon {
     width: 48px;
+    background-color: transparent;
+    border: none;
   }
   @media (min-width: 768px) {
     .navbar__menu__icon {
