--- a/src/components/QuantifyBanner/QuantifyBanner.css
+++ b/src/components/QuantifyBanner/QuantifyBanner.css
@@ -1,39 +1,31 @@
-.consultation-banner {
+.stats_section {
     background-color: #333;
     color: #fff;
     padding: 32px;
-    margin: 1px 0;
     text-align: center;
   }
-  
-  .book-button {
-    padding: 10px 20px;
-    margin: 20px 0;
-    background-color: #fff;
-    color: #333;
-    border: none;
-    cursor: pointer;
+  .stats {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 1200px;
+    min-height: 200px;
+    margin: 0 auto;
   }
-.stats {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  .stats_heading {
+    font-size: 32px;
+    margin-bottom: 32px;
+  }
+.stats_numbers {
+  display: flex;
+  flex-direction: column;
   gap: 16px;
 }  
 @media (min-width: 768px) {
-  .stats {
+  .stats_numbers {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
   }}
-  
-  .stats div {
-    text-align: center;
-  }
-  
-  .stats h2 {
-    margin: 0;
-  }
-  
-  .stats p {
-    margin: 5px 0 0;
-  }
   
