--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
   }
+
+  ul {
+    list-style-type: none;
+    padding: 0;
+  }
   
   img, picture, video, canvas, svg {
     display: block;
