--- a/src/components/Catalog/Catalog.css
+++ b/src/components/Catalog/Catalog.css
@@ -1,45 +1,48 @@
-.services_section {
-  padding: 32px;
-}
-.services {
-  max-width: 1200px;
+.catalog {
+  max-width: var(--width-tablet);
+  padding: 40px 16px;
   margin: 0 auto;
 }
-.services_heading {
-  margin-bottom: 32px;
-  font-size: 32px;
+@media (min-width: 991px) {
+  .catalog {
+    max-width: var(--width-desktop);
+    padding: 112px 32px;
+  }
 }
-.services_list {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-    gap: 20px;
+
+.catalog__heading {
+  font-size: var(--h2-size-mob);
+  text-align: center;
+  margin-bottom: 32px;
+}
+@media (min-width: 768px) {
+  .catalog__heading {
+    font-size: var(--h2-size-tab);
   }
-  
-  .service_card {
-    border: 1px solid #ccc;
-    padding: 20px;
-    text-align: center;
-    border-radius: 8px;
+}
+
+.catalog__list {
+  display: flex;
+  gap: 24px;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+.catalog__card {
+  min-width: 300px;
+  border: 1.5px solid #000000;
+  padding: 16px;
+  font-size: var(--p-size-mob);
+  text-align: center;
+  border-radius: 5px;
+  transition: transform 0.5s ease-in-out;
+}
+@media (min-width: 991px) {
+  .catalog__card {
+    font-size: var(--p-size-desk);
   }
-  
-  .service_card h3 {
-    margin-bottom: 16px;
-  }
-  
-  /* .service_card p {
-    margin-bottom: 20px;
-  } */
-  
-  /* .service-card button {
-    padding: 10px 20px;
-    background-color: hsl(0, 0%, 90%);
-    color: hsl(0, 0%, 0%);
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .service-card button:hover {
-    background-color: hsl(0, 0%, 85%);
-  }
-   */
+}
+
+.catalog__card__heading {
+  margin-bottom: 20px;
+}
