--- a/src/components/QuantifyBanner/QuantifyBanner.css
+++ b/src/components/QuantifyBanner/QuantifyBanner.css
@@ -1,31 +1,38 @@
-.stats_section {
-    background-color: #333;
-    color: #fff;
-    padding: 32px;
-    text-align: center;
+.banner__quantify {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 48px;
+  max-width: 1200px;
+  min-height: 200px;
+  margin: 0 auto;
+  padding: 48px 16px;
+  text-align: center;
+}
+@media (min-width: 991px) {
+  .banner__quantify {
+    padding: 112px 32px;
   }
-  .stats {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    max-width: 1200px;
-    min-height: 200px;
-    margin: 0 auto;
-  }
-  .stats_heading {
-    font-size: 32px;
-    margin-bottom: 32px;
-  }
-.stats_numbers {
+}
+
+.banner__quantify__heading {
+  font-size: var(--h2-size-mob);
+}
+@media (min-width: 768px) {
+.banner__quantify__heading {
+  font-size: var(--h2-size-tab);
+}
+}
+
+.banner__quantify__numbers {
   display: flex;
   flex-direction: column;
   gap: 16px;
-}  
+}
 @media (min-width: 768px) {
-  .stats_numbers {
-    display: flex;
+  .banner__quantify__numbers {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-  }}
-  
+  }
+}
