--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,9 @@
   * {
     margin: 0;
   }
-  
+  html {
+    min-width: 350px;
+  }
   body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
