--- a/src/components/BannerBooking/BannerBooking.css
+++ b/src/components/BannerBooking/BannerBooking.css
@@ -2,9 +2,14 @@
   display: flex;
   flex-direction: column;
   gap: 60px;
-  max-width: var(--width-tablet);
-  padding: 40px 16px;
+  max-width: var(--width-mobile);
+  padding: var(--box-padding-mobile);
   margin: 0 auto;
+}
+@media (min-width: 768px) {
+  .Banner_Booking {
+    max-width: var(--width-tablet);
+  }
 }
 @media (min-width: 991px) {
   .Banner_Booking {
@@ -12,7 +17,7 @@
     justify-content: space-between;
     gap: 48px;
     max-width: var(--width-desktop);
-    padding: 112px 32px;
+    padding: var(--box-padding-desktop);
   }
 }
 
@@ -62,6 +67,7 @@
 }
 
 .Banner_Booking_Content_Wrapper p {
+  max-width: 650px;
   text-align: center;
 }
 @media (min-width: 991px) {
@@ -109,7 +115,7 @@
   display: flex;
   justify-content: space-between;
   gap: 32px;
-  min-width: 350px;
+  min-width: 280px;
 }
 .Banner_Booking_Listitem:not(:last-of-type) {
   padding-bottom: 16px;
@@ -118,7 +124,7 @@
 }
 
 .Banner_Booking_Listitem span {
-  min-width: 150px;
+  min-width: 120px;
   text-align: center;
 }
 
