--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,70 +1,72 @@
 .navbar_wrapper {
- 
-  padding: 16px;
-  
   background-color: hsl(0, 0%, 20%);
 }
 .navbar {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: 0 auto;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 16px;
+  margin: 0 auto;
+}
+
+@media (min-width: 991px) {
+  .navbar {
+    max-width: var(--width-desktop);
   }
-  
+}
+
 .navbar__logo a {
   color: #fff;
   text-decoration: none;
   font-size: 32px;
 }
-  
+
+.navbar__menu {
+  list-style: none;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  width: 0;
+  padding: 0;
+  color: black;
+  text-align: center;
+  background-color: hsl(0, 0%, 20%);
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+@media (min-width: 768px) {
   .navbar__menu {
-    list-style: none;
-    position: absolute;
-    top: 100%;
-    right: 0;
-    width: 0;
+    position: relative;
+    display: flex;
+    width: auto;
     padding: 0;
-    color: black;
-    text-align: center;
-    background-color: hsl(0, 0%, 20%);
-    overflow-x: hidden;
-    transition: 0.5s;
+    column-gap: 16px;
   }
+}
 
-  @media (min-width: 768px) {
-    .navbar__menu {
-      position: relative;
-      display: flex;
-      width: auto;
-      padding: 0;
-      column-gap: 16px;
-    }
-  }
+.navbar__menu--state-active {
+  width: 150px;
+}
 
-  .navbar__menu--state-active {
-    width: 150px;
-  }
+.navbar__menu li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1rem;
+}
 
-  
-  .navbar__menu li a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1rem;
-  }
-  
-  .navbar__menu li a:hover {
-    color: #ddd;
-  }
-  
+.navbar__menu li a:hover {
+  color: #ddd;
+}
+
+.navbar__menu__icon {
+  width: 48px;
+  background-color: transparent;
+  border: none;
+}
+@media (min-width: 768px) {
   .navbar__menu__icon {
-    width: 48px;
-    background-color: transparent;
-    border: none;
+    display: none;
   }
-  @media (min-width: 768px) {
-    .navbar__menu__icon {
-      display: none;
-    }
-  }
+}
