--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,17 +1,22 @@
 .profile {
   display: flex;
   flex-direction: column;
-  gap: 48px;
-  max-width: var(--width-tablet);
-  padding: 40px 16px;
+  gap: 32px;
+  max-width: var(--width-mobile);
+  padding: var(--box-padding-mobile);
   margin: 0 auto;
+}
+@media (min-width: 768px) {
+  .profile {
+    max-width: var(--width-tablet);
+  }
 }
 @media (min-width: 991px) {
   .profile {
     display: flex;
     flex-direction: row;
     max-width: var(--width-desktop);
-    padding: 112px 32px;
+    padding: var(--box-padding-desktop);
   }
 }
 
