--- a/src/components/ContactBar/ContactBar.css
+++ b/src/components/ContactBar/ContactBar.css
@@ -1,43 +1,37 @@
 .contactbar {
-  padding: 16px;
-  color: hsl(0, 0%, 100%);
+  display: none;
+  color: var(--color-light-grey);
   background-color: var(--color-navy);
 }
-/* @media (min-width: 768px) {
+@media (min-width: 768px) {
   .contactbar {
     display: block;
   }
-} */
-.contactbar img {
+}
+
+.contactbar_wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  max-width: var(--width-tablet);
+  padding: 24px 16px;
+  margin: 0 auto;
+}
+@media (min-width: 991px) {
+  .contactbar_wrapper {
+    max-width: var(--width-desktop);
+  }
+}
+
+.contactbar_wrapper img {
   display: inline-block;
   width: 32px;
 }
-.contactbar_wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 24px;
-  max-width: 550px;
-  margin: 0 auto;
-}
-@media (min-width: 768px) {
-  .contactbar_wrapper {
-    flex-direction: row;
-    justify-content: space-between;
-    gap: unset;
-    max-width: 1200px;
-  }
-}
+
 .contact_list {
   display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-@media (min-width: 650px) {
-  .contact_list {
-    flex-direction: row;
-    gap: 16px;
-  }
+  gap: 16px;
 }
 
 /* .social_list {
