--- a/src/components/HeroNew/HeroNew.css
+++ b/src/components/HeroNew/HeroNew.css
@@ -2,14 +2,23 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 80vh;
-    background-size: cover;
+    min-height: 50vh;
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     background-blend-mode: soft-light;
     background-color: hsla(0, 0%, 0%, 0.7);
     transition: background-image 1s;
 }
+@media (min-width: 500px) {
+    .Hero {
+        background-size: cover;
+        background-position: center top 20%;
+    }}
+    @media (min-width: 768px) {
+        .Hero {
+            min-height: 80vh;
+        }}
 @media (min-width: 991px) {
 .Hero {
     background-position: top;
