--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -29,6 +29,7 @@
   display: flex;
   gap: 8px;
   overflow-x: hidden;
+  scroll-behavior: auto;
 }
 
 .service-card {
@@ -70,6 +71,10 @@
   transform: translateX(-50%);
 }
 
+.service-card p {
+  margin-bottom: 16px;
+}
+
 .service-card a {
   padding: 8px 20px;
   margin-top: auto;
@@ -77,11 +82,15 @@
   background-color: var(--color-grey);
   border-radius: 5px;
 }
-.service-card a:hover {
-  color: var(--color-grey);
-  background-color: transparent;
-  border: 1px solid var(--color-grey);
-}
+
+@media (hover: hover) { 
+  .service-card a:hover {
+    color: var(--color-grey);
+    background-color: transparent;
+    border: 1px solid var(--color-grey);
+  }
+ }
+
 
 .services-arrow-btn {
   position: absolute;
@@ -94,10 +103,17 @@
   transform: translateY(-50%);
   transition: all 0.5s;
 }
-.services-arrow-btn:hover {
-  background-color: var(--color-green);
-  transform: translateY(-50%) scale(1.2);
-}
+@media (hover: hover) { 
+  .services-arrow-btn:hover {
+    background-color: var(--color-green);
+    transform: translateY(-50%) scale(1.2);
+  }
+ }
 .arrow-btn-right {
   right: 0;
+}
+
+.service-card-icon {
+  width: 64px;
+  margin: 16px 0;
 }
