--- a/src/components/BannerBooking/BannerBooking.css
+++ b/src/components/BannerBooking/BannerBooking.css
@@ -86,8 +86,9 @@
 } */
 
 .Banner_Booking_Button {
-  padding: 15px 30px;
+  padding: 16px;
   margin-top: 16px;
+  font-size: 16px;
   color: hsl(0, 0%, 100%);
   text-decoration: none;
   letter-spacing: 0.2ch;
