--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -83,14 +83,13 @@
   border-radius: 5px;
 }
 
-@media (hover: hover) { 
+@media (hover: hover) {
   .service-card a:hover {
     color: var(--color-grey);
     background-color: transparent;
     border: 1px solid var(--color-grey);
   }
- }
-
+}
 
 .services-arrow-btn {
   position: absolute;
@@ -103,12 +102,10 @@
   transform: translateY(-50%);
   transition: all 0.5s;
 }
-@media (hover: hover) { 
-  .services-arrow-btn:hover {
+  .services-arrow-btn:hover, .services-arrow-btn:active {
     background-color: var(--color-green);
     transform: translateY(-50%) scale(1.2);
   }
- }
 .arrow-btn-right {
   right: 0;
 }
