--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -37,6 +37,7 @@
   background-color: hsl(0, 0%, 20%);
   overflow-x: hidden;
   transition: 0.5s;
+  z-index: 10;
 }
 
 @media (min-width: 768px) {
